--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	           <div class="content">
 	               	<article class="search" >
 	               		<input type="text" class="search-bar" />
-	               		<input type="image" src="images/icon_search.svg" class="search-button" ontouchstart="alert('Do search filter!')">
+	               		<input type="image" src="images/icon_search.svg" class="search-button" onclick="alert('Do search filter!')">
 	               	</article>
 	               	<form id="customers">
 	               	</form>
@@ -56,7 +56,7 @@
 	           	<div class="content">
 	               	<article class="search" >
 	               		<input type="text" class="search-bar" />
-	               		<input type="image" src="images/icon_search.svg" class="search-button" ontouchstart="alert('Do search filter!')">
+	               		<input type="image" src="images/icon_search.svg" class="search-button" onclick="alert('Do search filter!')">
 	               	</article>
 	               	<form id="items">
 	               	</form>
