--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pikaday.css">
+  <script src="phonegap.js"></script>
   <script src="js/pikaday.js"></script>
   <script src="js/object-observe-lite.min.js"></script>
   <script src="js/classie.js"></script>
