--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<html>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Gaz</title>
+  <meta name="description" content="app">
+  <meta name="author" content="Dagan Read">
+
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/pikaday.css">
+  <script src="js/pikaday.js"></script>
+  <script src="js/object-observe-lite.min.js"></script>
+  <script src="js/classie.js"></script>
+</head>
 <body>
 
 <div class='header'><h1>Home</h1></div>
