--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 	           
 	           <div class="content">
 	           	 <form id="sales">
+<div class='header'><h1>Home</h1></div>
+<div class='search-view'>
+<input class='search-key' type="text"/>
+<ul class='employee-list'></ul>
+</div>
 
 				</form> 
 	           </div> 
