--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pikaday.css">
   <script src="js/pikaday.js"></script>
+  <script src="js/polly.js"></script>
   <script src="js/object-observe-lite.min.js"></script>
   <script src="js/classie.js"></script>
 </head>
