--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 	       </div>
 	    </div>
 	</section>
+<script src="cordova.js"></script>
+<script src="dialogs.js"></script>
+<script src="contacts.js"></script>
 
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="js/storage/memory-store.js"></script>
