--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	           
 	           <div class="content">
 	               	<article class="search" >
-	               		<input type="image" src="images/sync.png" class="sync-button" onclick="app.sync.customer()">
+	               		<input type="image" src="img/sync.png" class="sync-button" onclick="app.sync.customer()">
 	               		<input type="text" class="search-bar" />
-	               		<input type="image" src="images/search.png" class="search-button" onclick="alert('search filter!')">
+	               		<input type="image" src="img/search.png" class="search-button" onclick="alert('search filter!')">
 	               	</article>
 	               	<form id="customers">
 	               	</form>
@@ -53,7 +53,7 @@
 	           	<div class="content">
 	               	<article class="search" >
 	               		<input type="text" class="search-bar" />
-	               		<input type="image" src="images/search.png" class="search-button" onclick="alert('Do search filter!')">
+	               		<input type="image" src="img/search.png" class="search-button" onclick="alert('Do search filter!')">
 	               	</article>
 	               	<form id="items">
 	               	</form>
