--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	           
 	           <div class="content">
 	               	<article class="search" >
-	               		<input type="image" src="img/sync.png" class="sync-button" onclick="app.sync.customer()">
+	               		<input type="image" src="img/sync.png" class="sync-button" onclick="app.sync.customers()">
 	               		<input type="text" class="search-bar" />
 	               		<input type="image" src="img/search.png" class="search-button" onclick="alert('search filter!')">
 	               	</article>
