--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	    <div class="tabs">
 	        
 	       <div class="tab">
-	           <input type="radio" value="Sales" onclick="alert(this.value)" id="tab-1" name="PrimaryNav" checked>
+	           <input type="radio" value="Sales" onclick="app.nav.to(this.value)" id="tab-1" name="PrimaryNav" checked>
 	           <label for="tab-1"><img src="img/sales.png" /></label>
 	           
 	           <div class="content">
