--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	       </div>
 	        
 	       <div class="tab">
-	           <input type="radio" value="Customers" onclick="app.nav.to(this.value)" id="tab-2" name="PrimaryNav">
+	           <input type="radio" value="Customers" onclick="alert('running');app.nav.to(this.value)" id="tab-2" name="PrimaryNav">
 	           <label for="tab-2"><img src="img/customers.png" /></label>
 	           
 	           <div class="content">
