--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	       </div>
 
 	       <div class="tab" id="new-tab">
-	           <input type="radio" value="New" onclick="app.nav.to(this.value, this.parentNode)" id="tab-5" name="PrimaryNav">
+	           <input type="radio" value="New" onclick="app.nav.to(this.value, this.parentNode)" id="tab-5" name="PrimaryNav" />
 	           <label for="tab-5"><img src="img/new.png" /></label>
 	         
 	           <div class="content">
