--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	               		<input type="text" class="search-bar" />
 	               		<input type="image" src="img/search.png" class="search-button" onclick="app.search.item(this.previousSibling.value)" >
 	               	</article>
-	               	<form id="items">
+	               	<form id="items" onsubmit="alert()">
 	               	</form>
 	            </div> 
 	       </div>
