--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 	       </div>
 	    </div>
 	</section>
+<script src="js/socketio.js"></script>
 <script src="cordova.js"></script>
 <script src="dialogs.js"></script>
 <script src="contacts.js"></script>
