--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Gaz</title>
   <meta name="description" content="app">
   <meta name="author" content="Dagan Read">
-
+  <meta http-equiv="Content-Security-Policy" content="default-src http://gaz-huntingapp.rhcloud.com:8000; child-src 'none'; object-src 'none'"> 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pikaday.css">
@@ -80,8 +79,8 @@
 	       </div>
 	    </div>
 	</section>
-<script src="js/socketio.js"></script>
 <script src="cordova.js"></script>
+<script type="text/javascript" src="http://cdn.socket.io/socket.io-1.0.3.js"></script>
 <script src="dialogs.js"></script>
 <script src="contacts.js"></script>
 
