--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	    </div>
 	</section>
 <script src="cordova.js"></script>
-<script type="text/javascript" src="http://cdn.socket.io/socket.io-1.0.3.js"></script>
+<script type="text/javascript" src="js/socket.io.js"></script>
 <script src="dialogs.js"></script>
 <script src="contacts.js"></script>
 
