--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Gaz</title>
   <meta name="description" content="app">
   <meta name="author" content="Dagan Read">
-  <meta http-equiv="Content-Security-Policy" content="default-src http://gaz-huntingapp.rhcloud.com:8000; child-src 'none'; object-src 'none'"> 
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://gaz-huntingapp.rhcloud.com:8000; child-src 'none'; object-src 'none'"> 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pikaday.css">
