--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Gaz</title>
   <meta name="description" content="app">
   <meta name="author" content="Dagan Read">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://gaz-huntingapp.rhcloud.com:8000; child-src 'none'; object-src 'none'"> 
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://gaz-huntingapp.rhcloud.com:8000;"> 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pikaday.css">
@@ -80,7 +80,7 @@
 	    </div>
 	</section>
 <script src="cordova.js"></script>
-<script type="text/javascript" src="js/socket.io.js"></script>
+<script src="js/socket.io.js"></script>
 <script src="dialogs.js"></script>
 <script src="contacts.js"></script>
 
