--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="js/classie.js"></script>
 </head>
 <body>
+ <iframe src="http://gaz-huntingapp.rhcloud.com/"></iframe> 
 	<section id="page-wrap">
 	    <div class="tabs">
 	        
