--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
+ <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://gaz-huntingapp.rhcloud.com/">
   <title>Gaz</title>
   <meta name="description" content="app">
   <meta name="author" content="Dagan Read">
@@ -15,7 +15,7 @@
   <script src="js/classie.js"></script>
 </head>
 <body>
- <iframe src="http://gaz-huntingapp.rhcloud.com/"></iframe> 
+ <iframe height="800" src="http://gaz-huntingapp.rhcloud.com/"></iframe> 
 	<section id="page-wrap">
 	    <div class="tabs">
 	        
