--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/pikaday.css">
+  <script src="http://gaz-huntingapp.rhcloud.com/socket.io/socket.io.js"></script>
   <script src="js/pikaday.js"></script>
   <script src="js/polly.js"></script>
   <script src="js/classie.js"></script>
