--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<section id="page-wrap">
-	 	<div class="md-modal md-effect-12" id="modal-12">
+	 	<div class="md-modal md-effect-12 md-show" id="modal-12">
 			<div class="md-content">
 				<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 				<button class="md-close">Close me!</button>
