--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="js/classie.js"></script>
 </head>
 <body>
-	 <div class="md-modal md-effect-12" id="modal-12">
+	 <div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
