Post message token

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
   <script src="js/polly.js"></script>
   <script src="js/classie.js"></script>
 </head>
-<body>
+<body class="cbp-spmenu-push">
+<nav class="banner"><input type="button" onclick="openMenu(this)" value="open menu" /><input type="button" onclick="alert('logout')" value="logout" /></nav>
+	<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+		<h3>Menu</h3>
+		<a href="#">Celery seakale</a>
+		<a href="#">Dulse daikon</a>
+		<a href="#">Zucchini garlic</a>
+		<a href="#">Catsear azuki bean</a>
+		<a href="#">Dandelion bunya</a>
+		<a href="#">Rutabaga</a>
+	</nav>
 	 <div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
