server connection unsuccessful

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 		<a href="#">Dandelion bunya</a>
 		<a href="#">Rutabaga</a>
 	</nav>
-	 <div class="md-modal md-effect-12 md-show" id="modal-12">
+	 <div class="md-modal md-effect-12" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
