--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
   <script src="js/classie.js"></script>
 </head>
 <body class="cbp-spmenu-push">
-<nav class="banner"><input type="button" onclick="openMenu(this)" value="open menu" /><input type="button" onclick="alert('logout')" value="logout" /></nav>
+<nav class="banner"><input type="button" onclick="app.openMenu(this)" value="open menu" /><input type="button" onclick="alert('logout')" value="logout" /></nav>
 	<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 		<h3>Menu</h3>
 		<a href="#">Celery seakale</a>
@@ -26,7 +26,7 @@
 		<a href="#">Dandelion bunya</a>
 		<a href="#">Rutabaga</a>
 	</nav>
-	 <div class="md-modal md-effect-12" id="modal-12">
+	 <div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
