logout push menu back up

--- a/main.html
+++ b/main.html
@@ -16,15 +16,11 @@
   <script src="js/classie.js"></script>
 </head>
 <body class="cbp-spmenu-push">
-<nav class="banner"><input type="button" onclick="app.openMenu(this)" value="open menu" /><input type="button" onclick="alert('logout')" value="logout" /></nav>
+<nav class="banner"><input type="button" onclick="app.openMenu(this)" value="open menu" /><input type="button" onclick="app.logout()" value="logout" /></nav>
 	<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 		<h3>Menu</h3>
-		<a href="#">Celery seakale</a>
-		<a href="#">Dulse daikon</a>
-		<a href="#">Zucchini garlic</a>
-		<a href="#">Catsear azuki bean</a>
-		<a href="#">Dandelion bunya</a>
-		<a href="#">Rutabaga</a>
+		<a href="#">Change Password</a>
+		<a href="#">Manual Back Up</a>
 	</nav>
 	 <div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
