--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
 	</div>
-	<!--<div class="md-overlay"></div>-->
+	<div class="md-overlay"></div>
 	<section id="page-wrap">
 	    <div class="tabs">
 	       <div class="tab">
