logout and back up

--- a/main.html
+++ b/main.html
@@ -15,15 +15,10 @@
   <script src="js/polly.js"></script>
   <script src="js/classie.js"></script>
 </head>
-<body class="cbp-spmenu-push">
+<body>
 	<nav class="banner">
 		<input type="button" onclick="app.openMenu(this)" value="open menu" />
 		<input type="button" onclick="app.logout()" value="logout" />
-	</nav>
-	<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
-		<h3>Menu</h3>
-		<a href="#">Change Password</a>
-		<a href="#">Manual Back Up</a>
 	</nav>
 	<div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
