logout and back up

--- a/main.html
+++ b/main.html
@@ -15,10 +15,10 @@
   <script src="js/polly.js"></script>
   <script src="js/classie.js"></script>
 </head>
-<body>
+<body class="cbp-spmenu-push">
 	<nav class="banner">
-		<input type="button" onclick="app.openMenu(this)" value="open menu" />
-		<input type="button" onclick="app.logout()" value="logout" />
+		<input type="button" onclick="app.openMenu(this)" value="Menu" />
+		<input type="button" onclick="app.logout()" value="Logout" />
 	</nav>
 	<div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
