logout and back up

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <body class="cbp-spmenu-push">
 	<nav class="banner">
 		<input type="button" onclick="app.openMenu(this)" value="Menu" />
-		<input type="button" onclick="app.logout()" value="Logout" />
+		<input type="button" onclick="alert()" value="Logout" />
 	</nav>
 	<div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
