logout and back up

--- a/main.html
+++ b/main.html
@@ -14,19 +14,17 @@
   <script src="js/pikaday.js"></script>
   <script src="js/polly.js"></script>
   <script src="js/classie.js"></script>
-  <script src="js/main.js"></script>
 </head>
 <body class="cbp-spmenu-push">
-	<nav class="banner">
+<!-- 	<nav class="banner">
 		<input type="button" onclick="app.openMenu(this)" value="Menu" />
 		<input type="button" onclick="alert()" value="Logout" />
-	</nav>
+	</nav> -->
 	<div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
 	</div>
-	<div class="md-overlay"></div>
 	<section id="page-wrap">
 	    <div class="tabs">
 	       <div class="tab">
@@ -88,13 +86,14 @@
 	       </div>
 	    </div>
 	</section>
-<script src="cordova.js"></script>
-<script src="js/socket.io.js"></script>
-<script src="dialogs.js"></script>
-<script src="contacts.js"></script>
+	<div class="md-overlay"></div>
+	<script src="cordova.js"></script>
+	<script src="js/socket.io.js"></script>
+	<script src="dialogs.js"></script>
+	<script src="contacts.js"></script>
 
-<script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/memory-store.js"></script>
-
+	<script src="lib/jquery-1.8.2.min.js"></script>
+	<script src="js/storage/memory-store.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
