logout and back up

--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
   <script src="js/classie.js"></script>
 </head>
 <body class="cbp-spmenu-push">
-<!-- 	<nav class="banner">
+<nav class="banner">
 		<input type="button" onclick="app.openMenu(this)" value="Menu" />
-		<input type="button" onclick="alert()" value="Logout" />
-	</nav> -->
+		<input type="button" id="btn_logout" value="Logout" />
+	</nav>
 	<div class="md-modal md-effect-12 md-show" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
