logout and back up

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
    <title>tittle</title>
    <script>
      window.location='./main.html';
+     document.getElementById('btn_logout').addEventListener("click", function() {
+	    alert('clicked');
+	}, false);
    </script>
   <body>
   </body>
