logout and back up

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 	<section id="page-wrap">
 	    <div class="tabs">
 	       <div class="tab">
-	           <input type="radio" value="Sales" onclick="app.nav.to(this.value)" id="tab-1" name="PrimaryNav" checked>
+	           <input type="radio" value="Sales" id="tab-1" name="PrimaryNav" checked>
 	           <label for="tab-1"><img src="img/sales.png" /></label>
 	           <div class="content">
 	           	 <form id="sales" onsubmit="return false">
