logout and back up

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 </head>
 <body class="cbp-spmenu-push">
 <nav class="banner">
-		<input type="button" onclick="app.openMenu(this)" value="Menu" />
+		<input type="button" id="btn_menu" onclick="app.openMenu(this)" value="Menu" />
 		<input type="button" id="btn_logout" value="Logout" />
 	</nav>
 	<div class="md-modal md-effect-12 md-show" id="modal-12">
