logout and back up

--- a/main.html
+++ b/main.html
@@ -16,6 +16,12 @@
   <script src="js/classie.js"></script>
 </head>
 <body class="cbp-spmenu-push">
+<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+	<h3>Main Menu</h3>
+	<a href="#">Change password</a>
+	<a href="#">Manual update</a>
+</nav>
+
 <nav class="banner">
 		<input type="button" id="btn_menu" onclick="app.openMenu(this)" value="Menu" />
 		<input type="button" id="btn_logout" value="Logout" />
