--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
 <body class="cbp-spmenu-push">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 	<h3>Main Menu</h3>
-	<a href="#">Change password</a>
-	<a href="#">Manual update</a>
+	<a href="#">Change Password</a>
+	<a href="#" class="backUp">Manual Back-Up</a>
 </nav>
 
 <nav class="banner">
