--- a/main.html
+++ b/main.html
@@ -17,7 +17,12 @@
 </head>
 <body class="cbp-spmenu-push">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
-	<h3>Main Menu</h3>
+	<h3 class="advanced" >Advanced Menu</h3>
+	<a href="#">Change Password</a>
+	<a href="#" class="backUp">Manual Back-Up</a>
+</nav>
+<nav class="cbp-spmenu cbp-spmenu-active cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s2">
+	<h3 class="main">Main Menu</h3>
 	<a href="#">Change Password</a>
 	<a href="#" class="backUp">Manual Back-Up</a>
 </nav>
