--- a/main.html
+++ b/main.html
@@ -17,14 +17,16 @@
 </head>
 <body class="cbp-spmenu-push">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
-	<h3 class="advanced" >Advanced Menu</h3>
-	<a href="#" class="storeLocal"><input type="checkbox" name="vehicle" value="Car">Local data</a>
-	<a href="#" class="loginExpire"><input type="range" min="1" max="7" step="1" defaultValue="1" ><span>1 day</span></a>
-</nav>
-<nav class="cbp-spmenu cbp-spmenu-active cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s2">
-	<h3 class="main">Main Menu</h3>
-	<a href="#">Change Password</a>
-	<a href="#" class="backUp">Manual Back-Up</a>
+	<section class="advancedMenu">
+		<h3 class="advanced" >Advanced Menu</h3>
+		<a href="#" class="storeLocal"><input type="checkbox" name="vehicle" value="Car">Local data</a>
+		<a href="#" class="loginExpire"><input type="range" min="1" max="7" step="1" defaultValue="1" ><span>1 day</span></a>
+	</section>
+	<section>
+		<h3 class="main">Main Menu</h3>
+		<a href="#" class="changePassword">Change Password</a>
+		<a href="#" class="backUp">Manual Back-Up</a>
+	</section>
 </nav>
 
 <nav class="banner">
