--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<a href="#" class="changePassword">Change Password</a>
 		<a href="#" class="backUp">Manual Back-Up</a>
 	</section>
-	<section id="advancedMenu">
+	<section id="advancedMenu" class="active">
 		<h3 class="main">Main Menu</h3>
 		<a href="#" class="storeLocal"><input type="checkbox" name="vehicle" value="Car">Local data</a>
 		<a href="#" class="loginExpire"><input type="range" min="1" max="7" step="1" defaultValue="1" ><span>1 day</span></a>
