--- a/main.html
+++ b/main.html
@@ -100,7 +100,7 @@
 	    </div>
 	</section>
 	<div class="md-overlay"></div>
-	<script src="cordova.js"></script>
+	<!--<script src="cordova.js"></script>-->
 	<script src="js/socket.io.js"></script>
 	<script src="dialogs.js"></script>
 	<script src="contacts.js"></script>
