--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
 	           
 	           <div class="content">
 	               	<article class="search" >
-	               		<input type="image" src="img/sync.png" class="sync-button" onclick="app.sync.customers()">
+	               		<input type="image" src="img/sync.png" class="sync-button" id="btn_sync_customer">
 	               		<input type="text" class="search-bar" />
 	               		<input type="image" src="img/search.png" class="search-button" onclick="app.search.customer(this.previousSibling.value)" >
 	               	</article>
