--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
  <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://gaz-huntingapp.rhcloud.com/">
+ <meta name="viewport" content="width=device-width, user-scalable=no" />
   <title>Gaz</title>
   <meta name="description" content="app">
   <meta name="author" content="Dagan Read">
