--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 		<input type="button" id="btn_menu" onclick="app.openMenu(this)" value="Menu" />
 		<input type="button" id="btn_logout" value="Logout" />
 	</nav>
-	<div class="md-modal md-effect-12 md-show" id="modal-12">
+	<div class="md-modal md-effect-12" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
