--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
   <script src="js/pikaday.js"></script>
   <script src="js/polly.js"></script>
   <script src="js/classie.js"></script>
+  <script src="js/round.js"></script>
 </head>
 <body class="cbp-spmenu-push">
 <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
