--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 	            <article class="search" >
 	            	<input type="image" src="img/sync.png" class="sync-button" id="btn_sync_sales">
 	            	<input type="text" class="search-bar" id="salesSearchText" />
-	            	<input type="image" src="img/search.png" class="search-button"  id="btn_salesSearch" onclick="app.search.sales(this.previousSibling.value)" >
+	            	<input type="image" src="img/search.png" class="search-button"  id="btn_salesSearch" onclick="alert(this.nextSibling.checked +' '+ this.previousSibling.value)" >
 					<input type="radio" name="filter" value="date"> Date
 					<input type="radio" name="filter" value="location"> Location
 					<input type="radio" name="filter" checked value="name"> Name
