--- a/main.html
+++ b/main.html
@@ -47,12 +47,11 @@
 	           <label for="tab-1"><img src="img/sales.png" /></label>
 	           <div class="content">
 	            <article class="search" >
-	            	<input type="image" src="img/sync.png" class="sync-button" id="btn_sync_sales">
 	            	<input type="text" class="search-bar" id="salesSearchText" />
-	            	<input type="image" src="img/search.png" class="search-button"  id="btn_salesSearch" onclick="alert(this.nextSibling.checked +' '+ this.previousSibling.value)" >
-					<input type="radio" name="filter" value="date"> Date
-					<input type="radio" name="filter" value="location"> Location
-					<input type="radio" name="filter" checked value="name"> Name
+	            	<input type="image" src="img/search.png" class="search-button"  id="btn_salesSearch" onclick="alert(this.nextSibling.checked +' '+ this.previousSibling.value)" ><br/>
+					<input type="radio" name="filter" value="date" /> Date
+					<input type="radio" name="filter" value="location" /> Location
+					<input type="radio" name="filter" checked value="name" /> Name<br/>
 	            </article>
 	           	 <form id="sales" onsubmit="return false">
 
