--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
 	           <div class="content">
 	            <article class="search" >
 	            	<input type="text" class="search-bar" id="salesSearchText" />
-	            	<input type="image" src="img/search.png" class="search-button"  id="btn_salesSearch" onclick="alert(this.nextSibling.checked +' '+ this.previousSibling.value)" ><br/>
+	            	<input type="image" src="img/search.png" class="search-button"  id="btn_search_sales" ><br/>
 					<input type="radio" name="filter" value="date" /> Date
 					<input type="radio" name="filter" value="location" /> Location
 					<input type="radio" name="filter" checked value="name" /> Name<br/>
