combined search terms

--- a/main.html
+++ b/main.html
@@ -50,9 +50,9 @@
 	            <article class="search" >
 	            	<input type="text" class="search-bar" id="salesSearchText" />
 	            	<input type="image" src="img/search.png" class="search-button"  id="btn_search_sales" ><br/>
-					<input type="radio" name="filter" id="btn_filter_date" value="date" /> Date
-					<input type="radio" name="filter" id="btn_filter_location" value="location" /> Location
-					<input type="radio" name="filter" id="btn_filter_name" checked value="name" /> Name<br/>
+					<input type="checkbox" name="filter" id="btn_filter_date" value="date" /> Date
+					<input type="checkbox" name="filter" id="btn_filter_location" value="location" /> Location
+					<input type="checkbox" name="filter" id="btn_filter_name" checked value="name" /> Name<br/>
 	            </article>
 	            <br/>
 	           	 <form id="sales" onsubmit="return false">
