--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-   <title>tittle</title>
+   <title>title</title>
    <script>
-     window.location='./main.html';
+     window.location='http://www.supabets.co.za';
    </script>
   <body>
   </body>
