--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html>
+<html  style="height:100%;" >
   <head>
    <title>title</title>
-   <script>
-     window.location='http://www.supabets.co.za';
-   </script>
-  <body>
+  <body style="height:100%;" >
+  <iframe width="100%" style="height:100%;" seamless src="http://www.w3schools.com">
+  <p>Your browser does not support iframes.</p>
+</iframe>
   </body>
 </html>
