--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <title>title</title>
   <body style="height:100%;" >
-  <iframe width="100%" style="height:100%;" seamless src="http://www.w3schools.com">
+  <iframe width="100%" style="height:100%;" seamless src="http://www.supabets.co.za">
   <p>Your browser does not support iframes.</p>
 </iframe>
   </body>
