remover server. icon

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
   <script src="js/includesPolly.js"></script>
 </head>
 <body class="cbp-spmenu-push">
-<nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+<!-- <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
 	<section>
 		<h3 class="advanced" >Advanced</h3>
 		<a href="#" class="changePassword">Change Password</a>
@@ -33,14 +33,14 @@
 </nav>
 
 <nav class="banner">
-		<input type="button" id="btn_menu" onclick="app.openMenu(this)" value="Menu" />
-		<input type="button" id="btn_logout" value="Logout" />
-	</nav>
-	<div class="md-modal md-effect-12" id="modal-12">
+	<input type="button" id="btn_menu" onclick="app.openMenu(this)" value="Menu" />
+	<input type="button" id="btn_logout" value="Logout" />
+</nav> -->
+	<!-- <div class="md-modal md-effect-12" id="modal-12">
 		<div class="md-content">
 			<iframe id="serverHandle" align="middle" frameborder="0" scrolling="no" seamless src="http://gaz-huntingapp.rhcloud.com"></iframe> 
 		</div>
-	</div>
+	</div> -->
 	<section id="page-wrap">
 	    <div class="tabs">
 	       <div class="tab">
